fix(ml): correct training data and recipe evaluation
Aggregate sales by day, use warehouse costs and recipe quantities, and validate predictions without fabricated confidence or heuristic sales. Harden the Java-Python contract and add regression coverage.